<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/nav_title_home" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_fill"
        android:title="@string/nav_title_favorite"
        />

    <item
        android:id="@+id/navigation_scan"
        android:title=""
        android:enabled="false"/>

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_title_history"
        />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/nav_title_setting" />

</menu>