<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.cekulit.ui.home.HomeFragment"
        android:label="@string/nav_title_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/navigation_scan"
        android:name="com.bangkit.cekulit.ui.camera.CameraActivity"
        android:label="@string/nav_title_scan"
        tools:layout="@layout/activity_camera" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bangkit.cekulit.ui.profile.ProfileFragment"
        android:label="@string/nav_title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>