<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.skincare.SkincareActivity">

    <TextView
        android:id="@+id/tv_title_skincare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title_skincare"
        android:textSize="@dimen/title_menu"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.09"
        />



    <androidx.cardview.widget.CardView
        android:id="@+id/cv_skin_type"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toTopOf="@+id/cv_skin_care"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cv_skin_care"
        app:layout_constraintBottom_toBottomOf="@+id/cv_skin_care"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="160dp"
                android:layout_height="28dp"
                android:text="@string/tv_skin_type"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@color/pink"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:text="@string/tv_oil_type"
                android:textColor="@color/pink"
                android:background="@color/pinky"
                android:gravity="center"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_skin_care"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_skincare"
        app:layout_constraintStart_toEndOf="@+id/cv_skin_type"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="160dp"
                android:layout_height="28dp"
                android:text="@string/tv_skin_care"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@color/pink"
                android:gravity="center"
                />

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_ingredient_skin_care"
                android:textColor="@color/pink"
                android:background="@color/pinky"
                android:gravity="center"
                android:paddingVertical="12dp"
                android:paddingHorizontal="8dp"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    
    <TextView
        android:id="@+id/tv_morning_skincare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/desc_menu"
        android:text="@string/tv_morning_skincare"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/cv_skin_type"
        app:layout_constraintStart_toStartOf="@id/cv_skin_type"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_morning_skincare"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/tv_morning_skincare"
        app:layout_constraintTop_toBottomOf="@id/tv_morning_skincare"
        tools:listitem="@layout/item_skincare" />

    <TextView
        android:id="@+id/tv_night_skincare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/desc_menu"
        android:text="@string/tv_night_skincare"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/rv_morning_skincare"
        app:layout_constraintStart_toStartOf="@id/cv_skin_type"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_night_skincare"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/tv_night_skincare"
        app:layout_constraintTop_toBottomOf="@id/tv_night_skincare"
        tools:listitem="@layout/item_skincare" />

</androidx.constraintlayout.widget.ConstraintLayout>