<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/root_layout_padding_horizontal"
        tools:context=".ui.help.HelpActivity">

        <TextView
            android:id="@+id/tv_title_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_help"
            android:textSize="22sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/tv_title_sub_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_sub_help"
            android:textColor="#D1D0D0"
            android:textSize="@dimen/desc_menu"
            app:layout_constraintTop_toBottomOf="@id/tv_title_help"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/tv_title_faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_faq"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_sub_help"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            />

        <LinearLayout
            android:id="@+id/ll_faq_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_title_faq"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_faq_1"
                    />
                <ImageView
                    android:id="@+id/iv_dropdown_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_drop_down"
                    android:layout_marginStart="222dp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_title_sub_faq_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_title_sub_faq_1"
                android:textColor="#D1D0D0"
                android:visibility="gone"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_faq_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_faq_1"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_faq_2"
                    />
                <ImageView
                    android:id="@+id/iv_dropdown_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_drop_down"
                    android:layout_marginStart="-28dp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_title_sub_faq_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_title_sub_faq_1"
                android:textColor="#D1D0D0"
                android:visibility="gone"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_faq_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_faq_2"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_title_faq_3"
                    />
                <ImageView
                    android:id="@+id/iv_dropdown_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_drop_down"
                    android:layout_marginStart="-28dp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_title_sub_faq_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_title_sub_faq_1"
                android:textColor="#D1D0D0"
                android:visibility="gone"
                />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>